<resources>
    <string name="app_name">DespesasEmDia_DD</string>
    <string name="logo_do_app_chamado_dd">Logo do APP, chamado DD</string>
    <string name="nome">Nome</string>
    <string name="digite_o_nome">Digite o nome</string>
    <string name="digite_o_email">Digite o email</string>
    <string name="digite_a_senha">Digite a senha</string>
    <string name="repita_a_senha">Repita a senha</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="repita_sua_senha">Repita sua senha</string>
    <string name="atualizar">Atualizar</string>
    <string name="informe_seu_nome">Informe seu nome</string>
    <string name="informe_seu_email">Informe seu email</string>
    <string name="informe_sua_senha">Informe sua senha</string>
    <string name="digite_novamente_sua_senha">Digite novamente sua senha</string>
    <string name="criar_conta">CRIAR CONTA</string>
    <string name="entrar">ENTRAR</string>
    <string name="n_o_possui_conta">Não possui conta?</string>
    <string name="cadastra_se">Cadastra-se</string>
    <string name="entrar_com_google">ENTRAR COM GOOGLE</string>
    <string name="recuperar_senha">Recuperar senha</string>
    <string name="despesas">Despesas</string>
    <string name="editar_conta">Editar Conta</string>
    <string name="deletar_conta">Deletar Conta</string>
    <string name="voltar">Voltar</string>
    <string name="deletar">Deletar</string>
    <string name="voc_realmente_deseja_deletar_sua_conta_lembrando_que_essa_a_o_n_o_pode_ser_desfeito_depois">Você realmente deseja deletar sua conta, lembrando que essa ação não pode ser desfeito depois?</string>
    <string name="enviar">Enviar</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="nomeuser">NomeUser</string>
    <string name="cone_que_representa_o_usu_rio">Ícone que representa o usuário</string>
    <string name="despesa_total_r_0_00">Despesa Total: R$ 0,00</string>
    <string name="hist_rico_de_gastos">Histórico de Gastos</string>
    <string name="seta_para_voltar_para_tela_anterior">Seta para voltar para tela anterior</string>
    <string name="bot_o_para_voltar_na_tela_anterior">Botão para voltar na tela anterior</string>
    <string name="ol_mundo">Olá, mundo</string>
    <string name="imagem_que_representa_a_logo_da_despesa">Imagem que representa a logo da despesa</string>
    <string name="grupo_despesa">Grupo despesa</string>
    <string name="despesas_do_grupo">Despesas do grupo</string>
    <string name="r_0_00">R$ 0,00</string>
    <string name="dd_mm_aaaa">DD/MM/AAAA</string>
    <string name="bot_o_de_deletar_despesa">Botão de deletar despesa</string>
    <string name="valor">Valor</string>
    <string name="categoria">Categoria</string>
    <string name="bot_o_de_adicionar_despesa">Botão de adicionar despesa</string>
    <string name="bot_o_de_voltar">Botão de voltar</string>
    <string name="informe_o_valor">Informe o valor</string>
    <string name="informe_a_categoria">Informe a categoria</string>
    <string name="categoria_da_despesa">Categoria da Despesa</string>
    <string name="grupos">Grupos</string>
    <string name="bot_o_para_voltar_para_tela_anterior">Botão para voltar para tela anterior</string>
    <string name="criar_novo_grupo">Criar Novo Grupo</string>
    <string name="bot_o_para_adicionar_um_novo_grupo">Botão para adicionar um novo grupo</string>
    <string name="bot_o_de_despesas_grupos">Botão de despesas grupos</string>
    <string name="bot_o_para_ir_para_grupos">Botão para ir para grupos</string>
    <string name="bot_o_pagina_inicial">Botão pagina inicial</string>
    <string name="icone_que_representa_o_grupo">Icone que representa o grupo</string>
    <string name="bot_o_para_ir_para_pagina_inicial">Botão para ir para pagina inicial</string>
    <string name="bot_o_para_ir_para_o_grupo">Botão para ir para o grupo</string>
    <string name="sair_do_grupo">Sair do Grupo</string>
    <string name="participantes">Participantes</string>
    <string name="bot_o_para_adicionar_participante">Botão para adicionar participante</string>
    <string name="r_11_2424">R$ 11,2424</string>
    <string name="criar_grupo">Criar Grupo</string>
    <string name="digite_o_nome_do_grupo">Digite o Nome do Grupo</string>
    <string name="informe_nome_do_grupo">Informe nome do grupo</string>
    <string name="criar">Criar</string>
    <string name="bot_o_de_fechar">Botão de fechar</string>
    <string name="testandonome">Vinicius</string>
    <string name="msg_de_bemvindo">Bem vindo,</string>
    <string name="nome_do_grupo">nome_do_grupo</string>
    <string name="participantedogrupo">Vinicius</string>
    <string name="categoriadadespesa">Transporte</string>
    <string name="adicionar_pessoa_no_grupo">Adicionar Pessoa no Grupo</string>
    <string name="digite_o_email_do_novo_participante">Digite o email do novo participante</string>
    <string name="comida">Comida</string>
    <string name="r_10_00">R$ 10.00</string>
    <string name="botao_para_deletar_despesa">Botao para deletar despesa</string>
    <string name="botao_de_voltar_para_o_home">Botao de voltar para o home</string>
    <string name="botao_para_adicionar_despesa">Botao para adicionar despesa</string>
    <string name="botao_para_despesas_mais_detalhadas">Botao para despesas mais detalhadas</string>
    <string name="botao_para_voltar_para_tela_anterior">Botao para voltar para tela anterior</string>
    <string name="categoriadespesa">CategoriaDespesa</string>
    <string name="total_10_99">Total 10.99</string>
    <string name="r_10265_12">R$ 10265.12</string>
    <string name="dd_mm_aa">dd/mm/AA</string>
    <string name="alimentacao">Alimentacao</string>
    <string name="alimenta_o">Alimentação</string>
    <string name="botao_em_forma_de_icone_para_navegar_para_o_crud_do_user">Botao em forma de icone para navegar para o crud do user</string>
</resources>