<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".grupo.Grupo">

    <View
        android:id="@+id/view9"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:background="@color/light_cyan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/btnVoltarGrupo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/bubbles"
        android:contentDescription="@string/bot_o_para_voltar_para_tela_anterior"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="@+id/view9"
        app:layout_constraintTop_toTopOf="@+id/view9"
        app:srcCompat="?attr/homeAsUpIndicator" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/icone_que_representa_o_grupo"
        app:layout_constraintBottom_toBottomOf="@+id/view9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view9"
        app:srcCompat="@drawable/users_group_people_icon" />

    <View
        android:id="@+id/view10"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:background="@color/azure"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/btnHomeGrupo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/azure"
        android:contentDescription="@string/bot_o_para_ir_para_pagina_inicial"
        app:layout_constraintBottom_toBottomOf="@+id/view10"
        app:layout_constraintEnd_toEndOf="@+id/view10"
        app:layout_constraintHorizontal_bias="0.218"
        app:layout_constraintStart_toStartOf="@+id/view10"
        app:layout_constraintTop_toTopOf="@+id/view10"
        app:layout_constraintVertical_bias="0.509"
        app:srcCompat="@drawable/home_house_icon" />

    <ImageButton
        android:id="@+id/btnGrupoGrupo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/azure"
        android:contentDescription="@string/bot_o_para_ir_para_o_grupo"
        app:layout_constraintBottom_toBottomOf="@+id/view10"
        app:layout_constraintEnd_toEndOf="@+id/view10"
        app:layout_constraintStart_toEndOf="@+id/btnHomeGrupo"
        app:layout_constraintTop_toTopOf="@+id/view10"
        app:srcCompat="@drawable/users_group_people_icon" />

    <Button
        android:id="@+id/btnSairGrupo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/sair_do_grupo"
        app:layout_constraintBottom_toTopOf="@+id/view10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="373dp"
        android:layout_height="239dp"
        android:layout_marginBottom="12dp"
        android:background="@color/bubbles"
        app:layout_constraintBottom_toTopOf="@+id/btnSairGrupo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        tools:listitem="@layout/pag_grupo_list" />

    <TextView
        android:id="@+id/textDespesaGrupo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:text="@string/r_11_2424"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view9" />

    <ImageButton
        android:id="@+id/btnAdicionarParticipante"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:layout_marginBottom="4dp"
        android:backgroundTint="@color/snow"
        android:contentDescription="@string/bot_o_para_adicionar_participante"
        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.706"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:srcCompat="@drawable/adicionar_icon" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:text="@string/participantes"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDespesaGrupo"
        app:layout_constraintVertical_bias="0.933" />
</androidx.constraintlayout.widget.ConstraintLayout>