<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".adicionarpessoagrupo.AdicionarPessoaGrupo">

    <View
        android:id="@+id/view12"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:background="@color/light_cyan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/btnVoltarPessoaGrupo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:backgroundTint="@color/light_cyan"
        android:contentDescription="@string/bot_o_para_voltar_para_tela_anterior"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/view12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view12"
        app:srcCompat="?attr/homeAsUpIndicator" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adicionar_pessoa_no_grupo"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/view12"
        app:layout_constraintEnd_toEndOf="@+id/view12"
        app:layout_constraintStart_toEndOf="@+id/btnVoltarPessoaGrupo"
        app:layout_constraintTop_toTopOf="@+id/view12"
        app:layout_constraintVertical_bias="0.495" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/digite_o_email_do_novo_participante"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view12" />

    <EditText
        android:id="@+id/inputEmailPessoaGrupo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/digite_o_email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHint="#8D6E63"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13"
        android:autofillHints="" />

    <Button
        android:id="@+id/btnEnviarPessoaGrupo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/enviar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputEmailPessoaGrupo" />
</androidx.constraintlayout.widget.ConstraintLayout>